<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background">

    <include layout="@layout/view_header" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/space_lg">

            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/course_code" style="@style/TextLabel" />
            <EditText android:id="@+id/etCode" android:layout_marginTop="@dimen/space_sm"
                android:inputType="textCapCharacters" android:maxLines="1" style="@style/FieldInput" />

            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_lg" android:text="@string/course_title" style="@style/TextLabel" />
            <EditText android:id="@+id/etTitle" android:layout_marginTop="@dimen/space_sm"
                android:inputType="text" android:maxLines="1" style="@style/FieldInput" />

            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_lg" android:text="@string/faculty" style="@style/TextLabel" />
            <EditText android:id="@+id/etFaculty" android:layout_marginTop="@dimen/space_sm"
                android:inputType="text" android:maxLines="1" style="@style/FieldInput" />

            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_lg" android:text="@string/schedule" style="@style/TextLabel" />
            <EditText android:id="@+id/etSchedule" android:layout_marginTop="@dimen/space_sm"
                android:inputType="text" android:maxLines="1" style="@style/FieldInput" />

            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_lg" android:text="@string/join_code" style="@style/TextLabel" />
            <EditText android:id="@+id/etJoinCode" android:layout_marginTop="@dimen/space_sm"
                android:inputType="textCapCharacters" android:maxLines="1"
                android:letterSpacing="0.15" android:textStyle="bold" style="@style/FieldInput" />

            <TextView android:id="@+id/tvError" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_md"
                android:textColor="@color/danger" android:textSize="@dimen/text_caption"
                android:visibility="gone" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSave" android:layout_width="match_parent"
                android:layout_marginTop="@dimen/space_xl"
                android:text="@string/create_course" style="@style/PrimaryButton" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
